cmake_minimum_required(VERSION 3.17)
project(untitled13)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled13 main.cpp CMapa.cpp CMapa.h Tipos.h CJugadores.cpp CJugadores.h CMenu.cpp CMenu.h CBomba.cpp CBomba.h CNiveles.cpp CNiveles.h CBattle_mode.h CBattle_mode.cpp CVidas.h CEnemigo.h CVidas.cpp)